name:          hybrid-vectors
category:      Data, Vector
version:       0.2.5
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/hybrid-vectors
bug-reports:   http://github.com/ekmett/hybrid-vectors/issues
copyright:     Copyright (C) 2013 Edward A. Kmett
build-type:    Simple
synopsis:      Hybrid vectors e.g. Mixed Boxed/Unboxed vectors
extra-source-files:
  .ghci
  .gitignore
  .vim.custom
description: Hybrid vectors e.g. Mixed Boxed/Unboxed vectors.
tested-with:   GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.7
             , GHC == 9.0.2
             , GHC == 9.2.8
             , GHC == 9.4.8
             , GHC == 9.6.6
             , GHC == 9.8.4
             , GHC == 9.10.1
             , GHC == 9.12.1

source-repository head
  type: git
  location: https://github.com/ekmett/hybrid-vectors.git

library
  build-depends:
    base          >= 4.9     && < 5,
    deepseq       >= 1.1     && < 1.6,
    primitive     >= 0.5     && < 0.10,
    vector        >= 0.11    && < 0.14,
    semigroups    >= 0.9     && < 1

  hs-source-dirs: src

  exposed-modules:
    Data.Vector.Hybrid
    Data.Vector.Hybrid.Internal
    Data.Vector.Hybrid.Mutable

  ghc-options: -Wall -O2
  default-language: Haskell2010

  if impl(ghc >= 8.6)
    ghc-options: -Wno-star-is-type
